# rust-roi-parser

./: Cargo.toml  README.md
public/: initiatives.html  initiatives.js  votes.html  votes.js
public/initiatives/: initiatives.js  main.js
public/votes/: config.js  main.js  util.js  votes.js
src/: main.rs  options.rs  worker.rs
src/database/: create_database.sql  data.rs  mod.rs
src/initiatives/: data.rs  mod.rs
src/roi/: data.rs  mod.rs
src/votes/: data.rs  mod.rs
