[package]
name = "roi-parser"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.10"
log = "0.4"
scraper = "0.14"
sqlite = "0.31"
structopt = "0.3"
warp = "0.3"

[dependencies.reqwest]
version = "0.11"
features = [ "blocking" ]

[dependencies.serde]
version = "1.0"
features = [ "derive" ]

[dependencies.time]
version = "0.3"
features = [ "formatting", "macros" ]

[dependencies.tokio]
version = "1"
features = [ "full" ]
